src/objects/Enphase_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Level__c</fullName>
        <label>Alert Level</label>
        <picklist>
            <picklistValues>
                <fullName>low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>high</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alert_Name__c</fullName>
        <label>Alert Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Start__c</fullName>
        <label>Alert Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <formula>IMAGE(
  CASE(Alert_Level__c,
    &apos;high&apos;, &apos;https://assets1.enphaseenergy.com/images/icons/e3_icon_sqr_error.png&apos;,
    &apos;medium&apos;, &apos;https://assets1.enphaseenergy.com/images/icons/e3_icon_sqr_warning.png&apos;,
    &apos;low&apos;, &apos;https://assets1.enphaseenergy.com/images/icons/e3_icon_sqr_info.png&apos;,
    &apos;https://assets1.enphaseenergy.com/images/icons/e3_icon_sqr_info.png&apos;
  ),
  TEXT(Alert_Level__c),
  15,
  18
)</formula>
        <label>Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Enphase Alerts</relationshipLabel>
        <relationshipName>Enphase_Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Devices__c</fullName>
        <label>Number of Devices</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_in_Enlighten__c</fullName>
        <formula>HYPERLINK(&apos;https://enlighten.enphaseenergy.com/systems/&apos; &amp; Installed_System__r.Enphase_ID__c  &amp; &apos;/arrays?&apos;, &apos;Enlighten&apos;, &apos;_blank&apos;)</formula>
        <label>View in Enlighten</label>
        <type>Text</type>
    </fields>
    <label>Enphase Alert</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enphase Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>